links of recipes added on index

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/black_bean_chili.html">Black bean chili</a></li>
+        <li><a href="recipes/french_toast_recipe.html">French toast</a></li>
+        <li><a href="recipes/silicianSausage.html">Silician sausage</a></li>
+      </ul>
 </body>
 </html>
