link to top and back on each pages, also readme edited

--- a/recipes/black_bean_chili.html
+++ b/recipes/black_bean_chili.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Black Bean Chili</h1>
+    <a href="../index.html">Return to home</a>
+    <h1 id="header">Black Bean Chili</h1>
     <a href="recipes/black_bean_chili.html"></a>
 
     <img src="../images/BlackBeanChili.jpg" height="300" width="400" alt="French toast">
@@ -33,5 +34,8 @@
         <li>Heat olive oil in a large saucepan over medium-high heat. Sauté tomatoes, bell pepper, onion, mushrooms, corn, and jalapeño until onion is translucent, about 10 minutes. Season with chili powder, cumin, and black pepper. Stir in black beans, broth, and salt; bring to a boil.</li>
         <li>Reduce heat to medium-low. Remove 1 1/2 cups chili to a food processor or blender; purée until smooth and stir back into chili in the pan. Serve hot by itself or over rice.</li>
     </ol>
+    <ul>
+        <a href="#header">Return to top</a>
+    </ul>
 </body>
 </html>
