--- a/recipes/french_toast_recipe.html
+++ b/recipes/french_toast_recipe.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>French Toast</h1>
+    <a href="../index.html">Return to home</a>
+    <h1 id="header">French Toast</h1>
     <a href="recipes/french_toast_recipe.html"></a>
 
     <img src="../images/french_toast.jpg" height="300" width="400" alt="French toast">
@@ -32,5 +33,9 @@
         <li>Transfer to the hot skillet and cook until golden, 3 to 4 minutes per side.</li>
         <li>Serve hot.</li>
     </ol>
+
+    <ul>
+        <a href="#header">Return to top</a>
+    </ul>
 </body>
 </html>
