--- a/recipes/silicianSausage.html
+++ b/recipes/silicianSausage.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sicilian Sausage Rolls </h1>
+    <a href="../index.html">Return to home</a>
+    <h1 id="header">Sicilian Sausage Rolls </h1>
     <a href="recipes/silicianSausage.html"></a>
 
     <img src="../images/silicianSausage.jpg" height="300" width="400" alt="Silician Sausage.html">
@@ -36,5 +37,9 @@
         <li>Cut into 12 equal portions, and place cut side up on the prepared baking sheet. Brush top of each sausage roll with remaining egg, and grate more pecorino Romano cheese over if desired.</li>
         <li>Bake in the preheated oven until nicely browned, 45 to 50 minutes.</li>
     </ol>
+
+    <ul>
+        <a href="#header">Return to top</a>
+    </ul>
 </body>
 </html>
