styles.css added, little changes on recipes pages

--- a/recipes/black_bean_chili.html
+++ b/recipes/black_bean_chili.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles.css">
+
 </head>
 <body>
     <a href="../index.html">Return to home</a>
     <h1 id="header">Black Bean Chili</h1>
     <a href="recipes/black_bean_chili.html"></a>
 
-    <img src="../images/BlackBeanChili.jpg" height="300" width="400" alt="French toast">
+    <img class="photo" src="../images/BlackBeanChili.jpg" height="300" width="400" alt="French toast">
     <h3>Description</h3>
     <p>This vegetable chili is best prepared with fresh veggies but still delicious with canned or frozen. Serve by itself or over rice.</p>
     <h3>Ingredients</h3>
