--- a/recipes/french_toast_recipe.html
+++ b/recipes/french_toast_recipe.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles.css">
+
 </head>
 <body>
     <a href="../index.html">Return to home</a>
     <h1 id="header">French Toast</h1>
     <a href="recipes/french_toast_recipe.html"></a>
 
-    <img src="../images/french_toast.jpg" height="300" width="400" alt="French toast">
+    <img class="photo" src="../images/french_toast.jpg" height="300" width="400" alt="French toast">
     <h3>Description</h3>
     <p>This fabulous French toast recipe works with many types of bread —white, whole wheat, brioche, cinnamon-raisin, Italian, or French! Delicious served hot with butter and maple syrup.</p>
     <p>If you're looking for the best French toast recipe on the internet, you've come to the right place. This tender, fluffy, and indulgent recipe comes together quickly and easily with just five ingredients you already have on hand.</p>
