--- a/recipes/silicianSausage.html
+++ b/recipes/silicianSausage.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles.css">
+
 </head>
 <body>
     <a href="../index.html">Return to home</a>
     <h1 id="header">Sicilian Sausage Rolls </h1>
     <a href="recipes/silicianSausage.html"></a>
 
-    <img src="../images/silicianSausage.jpg" height="300" width="400" alt="Silician Sausage.html">
+    <img class="photo" src="../images/silicianSausage.jpg" height="300" width="400" alt="Silician Sausage.html">
     <h3>Description</h3>
     <p>This is my take on Sicilian sausage rolls (tomasini), pizza dough spirals filled with ricotta and Italian sausage. They may not be that authentic, but they are extremely delicious. If you buy some ready-made pizza dough, they are also extremely easy.</p>
     <p>Before I get into these amazing Sicilian Sausage Rolls, I want to wish you all a Happy and Healthy New Year! We took a week off for the holiday, and it’s always challenging to get back in the swing of things, so please excuse this somewhat phoned-in post. The good news is this simple party snack doesn’t need much in the way of expansive explanations. </p>
