--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <img class="photo" src="./images/fondo_mono.jpg" alt="Monkey Chef">
+    <ul class="center">
         <li><a href="recipes/black_bean_chili.html">Black bean chili</a></li>
         <li><a href="recipes/french_toast_recipe.html">French toast</a></li>
         <li><a href="recipes/silicianSausage.html">Silician sausage</a></li>
